--- a/WEBSITE/2nd year.html
+++ b/WEBSITE/2nd year.html
@@ -3,7 +3,7 @@
         <title>ECE_2ndYear_Timetable</title>
         <style>
             body{
-                background-image: url(./back.jpg);
+                background-image: url(./IMAGE.webp);
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center center;
