--- a/WEBSITE/3rd year.html
+++ b/WEBSITE/3rd year.html
@@ -2,6 +2,14 @@
     <head>
         <title>ECE_3rdYear_Timetable</title>
         <style>
+            body{
+                background-image: url(./IMAGE.webp);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center center;
+                max-height: 100vh;
+                overflow: scroll;
+            }
             .subject
             {
                 font-size: 19px;
@@ -11,6 +19,12 @@
                 line-height: 40px;
                 color: rgb(21, 5, 244);;
         
+            }
+            .center{
+                padding-left: 25%;
+            }
+            .middle{
+                padding-left: 30%;
             }
             .sub-code
             {
@@ -45,6 +59,7 @@
         </style>
         </head>
         <body>
+            <div class="center">
             <h1>GOVERNMENT COLLEGE OF ENGINEERING</h1>
             <table border="5px" cellpadding="10px" >
                 <td colspan="9"><h1>ECE-III rd YEAR TIME TABLE       (6thSEM)</h1></td>
@@ -105,6 +120,8 @@
                 </tr>
 
             </table>
+        </div>
+        <div class="middle">
             <p class="sub-code">
                 Subject name - Subject code - Staff incharge
             </p>
@@ -128,4 +145,5 @@
             Communication  Skills and Language Laboratory -18EN501-Prasath
 
           </p>
+        </div>
         </body>
