--- a/WEBSITE/4th year.html
+++ b/WEBSITE/4th year.html
@@ -42,9 +42,25 @@
                 text-decoration: underline;
                 margin-left: 5px;
             }
+
+            body{
+                background-image: url(./IMAGE.webp);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center center;
+                max-height: 100vh;
+                overflow: scroll;
+            }
+            .center{
+                padding-left: 25%;
+            }
+            .middle{
+                padding-left: 30%;
+            }
         </style>
         </head>
         <body>
+            <div class="center">
             <h1 >GOVERNMENT COLLEGE OF ENGINEERING</h1>
          
             <table border="5px" cellpadding="10px" >
@@ -99,6 +115,8 @@
                 </tr>
 
             </table>
+        </div>
+        <div class="middle">
             <p class="sub-code">
                 Subject name - Subject code - Staff incharge
             </p>
@@ -109,7 +127,8 @@
               <br>
              Wireless Sensor Networks(WSN)-18ECPE806-Kavitha
               <br>
-            Satellite Communication(SC)-18ECPE810-Deepthio
+            Satellite Communication(SC)-18ECPE810-Deepthi
 
           </p>
+        </div>
         </body>
